# zkevm-cluster-benchmark

./: readme.txt
.github/workflows/: deploy-pages.yml  frontend.yml  tools.yml
frontend/: .gitignore  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/data/: mainnet-24949787-500-20260603-073025.json  mainnet-24949787-500.json  mainnet-25234200-500-20260603-052410.json  mainnet-25234200-500.json
frontend/src/: App.tsx  index.css  main.tsx  virtual-log-archive-index.d.ts
frontend/src/hooks/: useBench.ts  useBenchDerived.ts  (+15 more)
frontend/vite/: logArchiveIndex.ts
tools/: .gitignore  Cargo.toml  rustfmt.toml
tools/src/: lib.rs  main.rs  parse_benchmark.rs
tools/src/parse_benchmark/: error.rs  input.rs  output.rs
tools/src/parse_benchmark/input/: dmon.rs  log.rs  metrics.rs
tools/src/parse_benchmark/input/log/: lines.rs  zkvm.rs
tools/src/parse_benchmark/input/log/zkvm/: zisk.rs
tools/src/parse_benchmark/input/log/zkvm/zisk/: coordinator.rs  phases.rs  worker.rs
tools/src/parse_benchmark/output/: assemble.rs  schema.rs
tools/tests/: integration.rs
tools/tests/fixture/: benchmark.json  output.json
tools/tests/fixture/zkevm-metrics/: hardware.json
tools/tests/fixture/zkevm-metrics/zisk-eth-client-reth-v0.9.0/zisk-v0.18.0/: rpc_block_25192300.json  rpc_block_25192301.json  rpc_block_25192302.json  rpc_block_25192303.json  rpc_block_25192304.json  rpc_block_25192305.json  rpc_block_25192306.json  rpc_block_25192307.json  rpc_block_25192308.json  rpc_block_25192309.json
(+106 files in other folders)
