[package]
name = "tools"
version = "0.1.0"
edition = "2024"

[lib]
name = "tools"
path = "src/lib.rs"

[[bin]]
name = "tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1.12"
jiff = "0.2"
thiserror = "2"
